--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Fernando Bunn
 email: fernando@bunn.dev
 author: Fernando Bunn
 description: >- # this means to ignore newlines until "baseurl:"
-  Posts about iOS development or anything else I fell like it 🙃
+  Posts about iOS development or anything else I feel like it 🙃
 #baseurl: "/" # the subpath of your site, e.g. /blog
 #url: "https://bunn.dev" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: fcbunn
